# topk-decoding

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/profile/: analyze_ruler_results.py
benchmarks/ruler/: analyze_ruler_results.py  analyze_single_ruler.py  config_models.sh  prefill.py  run.sh
benchmarks/ruler/data/: prepare.py  tokenizer.py
benchmarks/ruler/eval/: evaluate.py  utils.py
benchmarks/ruler/pred/: call_api.py  model_wrappers.py
benchmarks/timing/: launch_all_timing.sh  launch_timing_a4000.sh  launch_timing_a6000.sh  timing.py
experiments/profile/: profile_ruler_topk.py
experiments/ruler/: prefill.py  run_ruler.py
experiments/timing/: convert_hs_to_cos_sin.py  launch_timing.sh  launch_timing_a4000.sh  launch_timing_a6000.sh  timing.py
src/topk_decoding/: __init__.py  example.py  monkey_patch.py  topk_attn.py  topk_cache.py  topk_decoding.py  topk_model.py  unrolled_mlp.py
test/: test_topk.py
tests/: ryan_cache_test.py  test.py  test_faiss_topk.py  test_topk.py
