[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topk_decoding"
version = "0.0.1"
dependencies = [
    "transformers"
]
description = "Topk decoding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ryansynk/topk-decoding"
Issues = "https://github.com/ryansynk/topk-decoding/issues"
