[project]
name = "topk_decoding"
version = "0.0.1"
dependencies = [
    "transformers"
]
description = "Topk decoding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = Apache-2.0
license-files = LICENSE

[project.urls]
Homepage = "https://github.com/ryansynk/topk-decoding"
Issues = "https://github.com/ryansynk/topk-decoding/issues"
