[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topk_decoding"
version = "0.0.1"
dependencies = [
    "transformers",
    "torch",
    "einops",
    "faiss-gpu-cu12",
]
authors = [
    {name = "Ryan Synk", email="ryansynk@umd.edu"},
    {name = "Monte Hoover", email="mhoover4@umd.edu"},
]
description = "Topk decoding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { name = "Apache-2.0", file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/ryansynk/topk-decoding"
Issues = "https://github.com/ryansynk/topk-decoding/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
